# uplift_sklearn

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
examples/: Criteo_uplift.py  Hillstrom_example.py  Hillstrom_regression.py  Hillstrom_uplift.py  Lalonde_regression.py  TelecomChurn_uplift.py  balanced_vs_unbalanced_target_transform.py  model_evaluation.py  readme_demo.py
scripts/: prepare_GUSTO.R  prepare_IST.py  prepare_Information.py  prepare_marketing_AB.py
tests/: test_binned_statistics.py  test_classifier_as_regressor.py  test_cv.py  test_memoized.py  test_uplift_curves.py
usklearn/: __init__.py  base.py  multi_model.py  pipeline.py
usklearn/classifiers/: __init__.py  classifier_as_regressor.py  memoized.py
usklearn/compose/: by_treatment_transformer.py
usklearn/datasets/: BMT.py  Criteo.py  Gusto.py  Hillstrom.py  IST.py  Information.py  Lalonde.py  Lazada.py  Lenta.py  MarketingAB.py  Megafon.py  OrangeChurn.py  Starbucks.py  Tamoxifen.py  TelecomChurn.py  __init__.py  _data.py  actg320.py  base.py  colon.py  pbc.py
usklearn/meta/: MLPregressor.py  __init__.py  base.py  multi_model.py  nested.py  response.py  robinson.py  s_learner.py  target_transform.py  x_learner.py
usklearn/metrics/: __init__.py  _scorer.py  bins.py  curves.py  regression.py  scorer.py
usklearn/model_selection/: __init__.py  _search.py  _validation.py
usklearn/preprocessing/: __init__.py  by_treatment_transformer.py  iptw.py
usklearn/utils/: __init__.py  array_utils.py  metrics.py  multi_array.py  stats.py  validation.py
